--- a/package.json
+++ b/package.json
@@ -19,7 +19,25 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "animate.css": "^4.1.0",
+    "aos": "^2.3.4",
+    "bootstrap": "^4.5.2",
+    "bootstrap-datepicker": "^1.9.0",
+    "icomoon-free-npm": "0.0.0",
+    "ionicons": "^5.1.2",
+    "jquery": "^3.5.1",
+    "jquery-migrate": "^3.3.1",
+    "jquery-timepicker": "^1.3.3",
+    "jquery-waypoints": "^2.0.5",
+    "jquery.animate-number": "0.0.14",
+    "jquery.easing": "^1.4.1",
+    "jquery.stellar": "^0.6.2",
+    "magnific-popup": "^1.1.0",
+    "open-iconic": "^1.1.1",
+    "owl.carousel": "^2.3.4",
+    "popper.js": "^1.14.3",
     "rxjs": "~6.5.5",
+    "scrollax": "^1.0.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
