--- a/angular.json
+++ b/angular.json
@@ -22,32 +22,26 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/assets/images"
+              "src/assets/images",
+              "src/_redirects"
             ],
             "styles": [
-
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css",
               "node_modules/animate.css/animate.css",
               "node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
               "node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
-
-
               "node_modules/magnific-popup/dist/magnific-popup.css",
               "node_modules/aos/dist/aos.css",
               "src/ionicons.min.css",
-
               "node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css",
               "node_modules/jquery-timepicker/jquery.timepicker.css",
               "src/flaticon.css",
               "src/icomoon.css",
               "src/styles.css"
-
-
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.slim.min.js",
-
-
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/jquery/dist/jquery.min.js",
@@ -124,6 +118,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -155,6 +150,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "foodclient"
 }
