--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@types/gapi": "0.0.39",
+    "@types/gapi.auth2": "0.0.52",
     "angular-material": "^1.2.0",
     "animate.css": "^4.1.0",
     "aos": "^2.3.4",
