--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,8 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+
+    "types": ["gapi","gapi.auth2"]
   },
   "files": [
     "src/main.ts",
